# hermes-agora

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.agent  LICENSE  README.md  __init__.py  cmd_list.py  cmd_new.py  cmd_result.py  cmd_status.py  cmd_vote.py  commands.py  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  plugin.yaml  pyproject.toml
agent_client/: __init__.py  client.py  config.py
agora/: __init__.py  __main__.py  cli.py
coordinator/: __init__.py  assessment.py  conclusion_types.py  config.py  dashboard.py  devils_advocate.py  focus.py  heartbeat.py  input_validation.py  judgment_types.py  main.py  memory_sync.py  model_capabilities.py  models.py  perspective_ensurer.py  quality_guard.py  quality_guard_models.py  quality_scorer.py  rate_limiter.py  realtime_evaluator.py  role_assigner.py  router.py  similar_topic.py  smart_scheduler.py  state.py  ws.py  ws_endpoint.py  ws_handlers.py  ws_smart.py  ws_vote.py
docs/: API-phase13-health.md  API-phase13-metrics.md  API-phase13-notifications.md  API-phase13-pipeline-ws.md  API-phase13-pipeline.md  API.md  ARCHITECTURE-phase13-dashboard.md  ARCHITECTURE-phase13-deploy.md  ARCHITECTURE-phase13-pipeline.md  ARCHITECTURE-phase13-sdks.md  ARCHITECTURE.md  DEPLOYMENT-config.md  DEPLOYMENT-ops.md  DEPLOYMENT-scaling.md  DEPLOYMENT-security.md  DEPLOYMENT.md  DESIGN-advanced-voting.md  DESIGN-agent-registration.md  DESIGN-agora-slash-command.md  DESIGN-bootstrap.md  DESIGN-coordinator-fastapi.md  DESIGN-discussion-voting.md  DESIGN-fault-tolerance.md  DESIGN-memory-evolution.md  DESIGN-phase10.md  DESIGN-phase11.md  DESIGN-phase12.md  DESIGN-phase13.md  DESIGN-phase14-workspace.md  DESIGN-phase7.md  DESIGN-phase8.md  DESIGN-phase9-agent-protocol.md  DESIGN-phase9-rate-limiting.md  DESIGN-phase9-task-engine.md  DESIGN-phase9.md  DESIGN-quality-efficiency.md  DESIGN-security.md  DESIGN-smart-discussion.md  DESIGN-sqlite-storage.md  DESIGN-tools.md  (+4 more)
tests/: conftest.py  metrics_history_helpers.py  test_accept_result.py  test_agent_client.py  test_agent_config.py  test_agent_config_routes.py  test_approval_flow.py  test_assessment.py  test_audit.py  test_audit_query.py  test_bootstrap_engine.py  test_bootstrap_schema.py  test_cmd_list.py  test_cmd_new.py  test_cmd_result.py  test_cmd_status.py  test_cmd_vote.py  test_commands.py  test_config_loader.py  test_config_settings.py  test_consensus_jump.py  test_curator.py  test_dashboard.py  test_dashboard_api.py  test_dashboard_api_graphs.py  test_dashboard_ws.py  test_dashboard_ws_auth.py  test_dashboard_ws_broadcast.py  (+136 more)
(+225 files in other folders)
