[project]
name = "hermes-agora"
version = "0.1.0"
description = "Multi-Agent Deliberation Framework for Hermes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
agora-coordinator = "coordinator.main:main"
agora-agent = "agent_client.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
