[project]
name = "agora"
version = "0.13.0"
description = "Multi-Agent Deliberation Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "prometheus-client>=0.20",
    "pyyaml>=6.0",
    "pyjwt>=2.8",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.scripts]
agora = "agora.cli:main"
agora-coordinator = "agora.coordinator.main:main"
agora-agent = "agora.agent_client.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agora"]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests (no Coordinator process)",
    "integration: Integration tests (start real Coordinator)",
    "benchmark: Performance benchmarks",
]
asyncio_mode = "auto"
